# drain

./: .air.toml  .dockerignore  .gitignore  Dockerfile  Dockerfile.postgres  docker-compose.beacon.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.yml  go.mod  go.sum  main.go  package.json  pyproject.toml  renovate.json  requirements.txt
.github/workflows/: deploy.yml  dev.yml  python.yml
.zed/: settings.json
dashboard/: .gitignore  rill.yaml
dashboard/dashboards/: DAU.yaml  Daily Active Users.yaml  activation_dashboard.yaml  started_dashboard.yaml
dashboard/models/: DAU.sql  activation.sql  events.sql  running.sql  start.sql
dashboard/sources/: beacon.yaml
init/: 01_init.sql
internal/: types.go
internal/cleanup/: garbage.go
internal/ga/: mb.go
internal/influx/: point_writer.go  writer.go
internal/web/: http.go
internal/writer/: influx.go  json.go  parquet.go  pg.go
notebooks/: .gitignore  README.md  attribute_analysis.py  cohort_analysis.py  config.py  dashboard.py  data_loader.py  engagement_analysis.py  mobile.ipynb  retention.ipynb  retention.py  usage_analysis.py  visualizations.py
notebooks/dashboard_modules/: __init__.py  config.py  data_processing.py  visualizations.py
notebooks/tests/: conftest.py  test_attribute_analysis.py  test_data_loader.py  test_engagement_analysis.py
